updated hyprland config with habitica app

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -51,7 +51,8 @@ $menu = wofi --show drun
 
 exec-once = waybar & nm-applet
 exec-once = blueman-applet
-exec-once = [workspace special:temp silent] /opt/Surfshark/surfshark
+exec-once = [workspace special:vpn silent] /opt/Surfshark/surfshark
+exec-once = [workspace special:temp silent] flatpak run com.brave.Browser --app=https://habitica.com/
 #exec-once = [workspace 2 silent] flatpak run com.brave.Browser
 exec-once = [workspace special:magic silent] flatpak run org.telegram.desktop
 exec-once = [workspace special:magic silent] geary
@@ -103,8 +104,8 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 2
-    gaps_out = 5
+    gaps_in = 4
+    gaps_out = 10
 
     border_size = 5
 
@@ -286,7 +287,9 @@ bind = CTRL, space, movetoworkspace, magic
 bind = , XF86Mail, togglespecialworkspace, magic
 bind = CTRL, XF86Messenger, movetoworkspace, special:magic
 bind = $mainMod, Home, togglespecialworkspace, temp
+bind = $mainMod, grave, togglespecialworkspace, temp
 bind = $mainMod CTRL, Home, movetoworkspace, special:temp
+bind = $mainMod CTRL, V, togglespecialworkspace, vpn
 
 
 # Scroll through existing workspaces with mainMod + scroll
@@ -357,7 +360,6 @@ bind =  SHIFT, PRINT, exec, hyprshot -m region
 
 bind = $mainMod, F12, exec, obsidian
 
-bind = $mainMod, F1, exec,  gamescope -h 1200 -w 1920 -e -- steam
 
 bind = $mainMod, I, exec, $terminal ~/StandaloneApplications/ImageGen/webui.sh --use-cpu all --no-half --api
 
