updated some configs

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -283,7 +283,7 @@ bind = $mainMod CTRL, 0, movetoworkspace, 10
 bind = , XF86Messenger, togglespecialworkspace, magic
 bind = $mainMod, mouse:274, togglespecialworkspace, magic
 bind = $mainMod, space, togglespecialworkspace, magic
-bind = CTRL, space, movetoworkspace, magic
+bind = CTRL, space, movetoworkspace, special:magic
 bind = , XF86Mail, togglespecialworkspace, magic
 bind = CTRL, XF86Messenger, movetoworkspace, special:magic
 bind = $mainMod, Home, togglespecialworkspace, temp
@@ -378,6 +378,8 @@ bind = $mainMod, D, movecurrentworkspacetomonitor, r
 bind = CTRL, F12, exec, /home/serhii/.config/hypr/scripts/toggle-device.sh at-translated-set-2-keyboard
 
 bind = CTRl, F12, exec, /home/serhii/.config/hypr/scripts/toggle-device.sh tpps/2-elan-trackpoint
+
+$keyboardState = 1
 device {
     name = at-translated-set-2-keyboard
     enabled = 1
@@ -390,7 +392,7 @@ device {
 
 bind=SUPER,F1,exec,~/.config/hypr/show-hypr-cheats.sh
 #bind=ctrl,m,exec,~/.config/hypr/scripts/ftp_toggle.sh
-bind=ctrl,s,exec, flatpak run com.brave.Browser --app=http://100.110.77.11:8081/
+bind=CTRL $mainMod, s,exec, flatpak run com.brave.Browser --app=http://100.110.77.11:8081/
 
 bind=ctrl,m,exec,$terminal ~/.menu/menu
 windowrulev2 = float, title:^HyprCheats$
