--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,36 +1,36 @@
-cursor #87796b
-cursor_text_color #0d1112
-selection_foreground #0d1112
-selection_background #9f9286
+cursor #97a9d3
+cursor_text_color #21345a
+selection_foreground #21345a
+selection_background #bbc7e2
 
-url_color #d9dbcc
-visual_bell_color #c4b29b
-bell_border_color #cabbb3
+url_color #e5dee0
+visual_bell_color #67c3cc
+bell_border_color #d4d2e4
 
-active_border_color #aa927b
-inactive_border_color #9f9286
+active_border_color #b6c5e7
+inactive_border_color #bbc7e2
 
-foreground #718a91
-background #020303
+foreground #69a0ea
+background #1a2947
 
-active_tab_foreground #0d1112
-active_tab_background #7e8384
-inactive_tab_foreground #818181
-inactive_tab_background #181f21
+active_tab_foreground #21345a
+active_tab_background #72a1e1
+inactive_tab_foreground #7aa3d9
+inactive_tab_background #283f6d
 
-color0 #718a91
-color8 #5a6f75
-color1 #d9dbcc
-color9 #dddfc8
-color2 #c4b29b
-color10 #c4b99b
-color3 #cabbb3
-color11 #dcd6d3
-color4 #9f9286
-color12 #b6aca2
-color5 #aea29a
-color13 #aea59a
-color6 #a78872
-color14 #b28667
-color7 #bdc7c1
-color15 #d9dedb
+color0 #d08d7c
+color8 #c36c56
+color1 #e5dee0
+color9 #e8dbe0
+color2 #67c3cc
+color10 #67b2cc
+color3 #d4d2e4
+color11 #f0eefa
+color4 #bbc7e2
+color12 #dfe4f1
+color5 #aeb0d1
+color13 #b2aed1
+color6 #cfbcc3
+color14 #d5b6c1
+color7 #68a1ed
+color15 #96bdf2
