--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,36 +1,36 @@
-cursor #97a9d3
-cursor_text_color #21345a
-selection_foreground #21345a
-selection_background #bbc7e2
+cursor #f3a01c
+cursor_text_color #4f212e
+selection_foreground #4f212e
+selection_background #f6b44c
 
-url_color #e5dee0
-visual_bell_color #67c3cc
-bell_border_color #d4d2e4
+url_color #f1f7ea
+visual_bell_color #e6e334
+bell_border_color #f2d275
 
-active_border_color #b6c5e7
-inactive_border_color #bbc7e2
+active_border_color #ffb643
+inactive_border_color #f6b44c
 
-foreground #69a0ea
-background #1a2947
+foreground #eb6fa3
+background #3d1924
 
-active_tab_foreground #21345a
-active_tab_background #72a1e1
-inactive_tab_foreground #7aa3d9
-inactive_tab_background #283f6d
+active_tab_foreground #4f212e
+active_tab_background #e377a4
+inactive_tab_foreground #db7fa6
+inactive_tab_background #612938
 
-color0 #d08d7c
-color8 #c36c56
-color1 #e5dee0
-color9 #e8dbe0
-color2 #67c3cc
-color10 #67b2cc
-color3 #d4d2e4
-color11 #f0eefa
-color4 #bbc7e2
-color12 #dfe4f1
-color5 #aeb0d1
-color13 #b2aed1
-color6 #cfbcc3
-color14 #d5b6c1
-color7 #68a1ed
-color15 #96bdf2
+color0 #e17a85
+color8 #d8505f
+color1 #f1f7ea
+color9 #f2f8e9
+color2 #e6e334
+color10 #cbe634
+color3 #f2d275
+color11 #ffe895
+color4 #f6b44c
+color12 #f8c97d
+color5 #faec95
+color13 #f7fa95
+color6 #f1a889
+color14 #f8a582
+color7 #f89f68
+color15 #fabe99
